--- a/firmOrder.html
+++ b/firmOrder.html
@@ -7,8 +7,6 @@
     <meta content="yes" name="apple-mobile-web-app-capable">
     <meta content="black" name="apple-mobile-web-app-status-bar-style">
     <meta content="telephone=no" name="format-detection">
-    <link rel="stylesheet" href="css/common.css">
-    <link rel="stylesheet" href="css/firmOrder.css">
     <script>
         !function(win) {
             function resize() {
@@ -65,6 +63,9 @@
             resize();
         }(window);
     </script>
+    <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="css/firmOrder.css">
+
 </head>
 <body>
 <div class="header">
@@ -109,8 +110,8 @@
         <div class="num_r">
             <input class="add" name="" type="button" value="+"
                    style="width:0.768rem;height:0.768rem"/>
-            <input class="text_box" name="" type="text" value="1" style="width:2.35rem;border:none;outline: none;text-align: center;"/>
-            <input class="min" name="" type="button" value="--"
+            <input class="text_box" name="" type="text" value="1" style="width:1.8rem;border:none;outline: none;text-align: center;"/>
+            <input class="min" name="" type="button" value="-"
                    style="width:0.768rem;height:0.768rem"/>
         </div>
     </div>
